# masonite

./: .all-contributorsrc  .coveragerc  .deepsource.toml  .env-example  .env.local  .env.production  .env.test  .env.testing  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  SECURITY.md  WHITEPAPER.md  craft  database.sqlite3  lara.py  masonite.db  masonite.db-journal  masonite.sqlite3  mine.py  package.json  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  runtime.txt  setup.cfg  (+3 more)
.circleci/: config.yml
.github/: FUNDING.yml
app/: Migrations.py  User.py  Users.py  start.py
bootstrap/: start.py
config/: __init__.py  app.py  application.py  auth.py  broadcast.py  cache.py  database.py  factories.py  mail.py  middleware.py  packages.py  payment.py  providers.py  queue.py  session.py  storage.py
docs/: 1.-Installation.md  1.1-Configuration.md  1.2-Directory-Structure.md  1.3-Deployment.md  1.4-Getting-Started---Hello-World.md  2.-Architecture-Concepts.md  3.-The-Basics.md  3.1-HTTP-Routing.md  3.2-API-Routing.md  3.3-Url-Parameters.md  3.4-Controllers-and-Views.md  3.5-Models-and-Migrations.md  5.-The-craft-Command-Tool.md  6.-Database.md  7.-ORM.md  8.-Static-Files.md  8.1-Writing-in-SASS.md  Creating-Packages.md  Home.md  Masonite-AuthHub.md  Masonite-Clerk.md  Middleware.md  Requests.md  home.md
http/: request.py  routes.py  view.py
masonite/: __init__.py  __version__.py  app.py  autoload.py  controllers.py  environment.py  exception_handler.py  exceptions.py  hook.py  info.py  packages.py  provider.py  request.py  response.py  routes.py  session.py  stacktrace.py  storage.py  validator.py  view.py
middleware/: CsrfMiddleware.py
resources/: __init__.py
routes/: api.py  web.py
storage/: append_from.txt  file.txt
testpackage/: outside.js  provider.py  test-config.py
tests/: TestCase.py  test_api_routes.py  test_app.py  test_auth.py  test_autoload.py  test_cache.py  test_compile_sass.py  test_container.py  test_controllers.py  test_cookie_signing.py  test_csrf.py  test_hook.py  (+25 more)
(+1208 files in other folders)
