[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
argon2-cffi = "^23.1.0"
bcrypt = ">=3.2,<3.3"
black = "^24.4.2"
cleo = ">=0.8.1,<0.9"
cryptography = ">=3.3.1,<4.0"
dotty-dict = ">=1.3.0,<1.40"
exceptionite = ">=2.0,<3"
hashids = ">=1.3,<1.4"
hfilesize = ">=0.1"
hupper = ">=1.10,<1.11"
inflection = ">=0.3,<0.4"
jinja2 = ">=3.0.0,<3.1"
masonite-orm = ">=2,<3"
pendulum = ">=2,<3"
pwnedapi = "^1.0.2"
vonage = "^3.16.0"
pytest = "^8.2.2"
python-dotenv = ">=0.15,<0.16"
responses = "^0.25.3"
slackblocks = "^1.0.10"
tldextract = ">=2.2,<2.3"
werkzeug = ">=2,<3"
whitenoise = ">=5.2,<5.3"
pyjwt = ">=2.3,<2.5"
masonite = ">=4,<5"
watchdog = ">=2,<3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
