[metadata]
description-file = README.md
[flake8]
ignore=E501,F401,E128,E402,E731,F821,E712
exclude =
    app,
    bootstrap/cache,
    config,
    middleware,
    resources,
    routes,
    storage,
    testpackage,
    tests,
    uploads,
    .coveragerc,
    .env-example,
    .env.local,
    .env.production,
    .gitignore,
    .travis.yml,
    CHANGELOG.md,
    CONTRIBUTING.md,
    LICENSE.txt,
    MANIFEST.in,
    README.md,
    requirements.txt,
    setup.py
    
    
